<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msgSelecionarCores"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/preto"
        />
        <View
            android:layout_width="match_parent"

            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/reservadas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/stglivres"
                    android:textAlignment="center"/>
                <RadioGroup
                    android:id="@+id/rbtnLivres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/vermelhoL"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vermelho"
                        />
                    <RadioButton
                        android:id="@+id/verdeL"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verde"
                        />
                    <RadioButton
                        android:id="@+id/amareloL"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amarelo"
                        />

                    <RadioButton
                        android:id="@+id/azulL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/azul"
                        tools:ignore="TextContrastCheck" />
                    <RadioButton
                        android:id="@+id/pretoL"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/preto"
                        />
                    <RadioButton
                        android:id="@+id/brancoL"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/branco"
                        />
                    <RadioButton
                        android:id="@+id/marromL"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marrom"
                        />


                </RadioGroup>
            </LinearLayout>
            <View
                android:background="@color/preto"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                />
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/naoreservadas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/stgreservadas"
                    android:textAlignment="center"/>
                <RadioGroup
                    android:id="@+id/rbtnReservadas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/vermelhoR"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vermelho"
                        />
                    <RadioButton
                        android:id="@+id/verdeR"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verde"
                        />
                    <RadioButton
                        android:id="@+id/amareloR"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amarelo"
                        />

                    <RadioButton
                        android:id="@+id/azulR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/azul"
                        tools:ignore="TextContrastCheck" />
                    <RadioButton
                        android:id="@+id/pretoR"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/preto"
                        />
                    <RadioButton
                        android:id="@+id/brancoR"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/branco"
                        />
                    <RadioButton
                        android:id="@+id/marromR"
                        android:minHeight="48dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marrom"
                        />

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btnSalvarCores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stgsalvarcores"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

</LinearLayout>