<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cinzaBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/lnl1"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@color/azulescuro"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="15dp">
            <TextView
                android:id="@+id/n1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="1"
                android:textSize="50sp"
                android:textColor="@color/branco"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
            <Button
                android:id="@+id/btn1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btnReservar"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnl2"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="10dp"
            android:background="@color/azulescuro">
            <TextView
                android:id="@+id/n2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="2"
                android:textSize="50sp"
                android:textColor="@color/branco"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
            <Button
                android:id="@+id/btn2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btnReservar"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnl3"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="10dp"
            android:background="@color/azulescuro">
            <TextView
                android:id="@+id/n3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="3"
                android:textSize="50sp"
                android:textColor="@color/branco"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
            <Button
                android:id="@+id/btn3"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btnReservar"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/lnl4"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="15dp"
            android:background="@color/azulescuro"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/n4"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="4"
                android:textColor="@color/branco"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btnReservar" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl5"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="10dp"
            android:background="@color/azulescuro"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/n5"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="5"
                android:textColor="@color/branco"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btnReservar" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl6"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="10dp"
            android:background="@color/azulescuro"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/n6"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="6"
                android:textColor="@color/branco"
                android:textSize="50dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,SpUsage" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btnReservar" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/lnl7"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="15dp"
            android:background="@color/azulescuro"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/n7"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="7"
                android:textColor="@color/branco"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btnReservar" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl8"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginLeft="10dp"
            android:background="@color/azulescuro"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/n8"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="8"
                android:textColor="@color/branco"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btnReservar" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl9"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="10dp"
            android:background="@color/azulescuro"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/n9"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="9"
                android:textColor="@color/branco"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btnReservar" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/txtNumMesa"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="170dp"
        android:hint="@string/hintNumMesa"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,HardcodedText,TextFields" />

    <Button
        android:id="@+id/btnLiberar"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="170dp"
        android:text="@string/btnLiberar"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="380dp"
        android:layout_height="45dp"

        android:layout_marginTop="265dp"
        android:text="@string/btnSalvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReservaTudo"
        android:layout_width="380dp"
        android:layout_height="45dp"

        android:layout_marginTop="360dp"
        android:text="@string/btnReservarTodas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="380dp"
        android:layout_height="45dp"

        android:layout_marginTop="455dp"
        android:text="@string/btnConfig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>